# ImageRotation

./: CMakeLists.txt  base_image.c  bmp.c  byte_array.c  file_io.c  image_rotation.c  img_manipulations.c  main.c
include/: base_image.h  bmp.h  byte_array.h  file_io.h  image_rotation.h  img_manipulations.h
